# c

./: .gitignore  CMakeLists.txt  c.cmake  c.depend  file
.cache/clangd/index/: advanced.c.A6FDB817A16A3CB5.idx  allocs.c.F7B70BA981858D9A.idx  c99.c.82B9FF3A03907130.idx  charArray.c.299CDA67FA629DFD.idx  cmpss.c.A80F60BACB77FE6C.idx  est.c.1DFE26DD553F49AA.idx  files.c.66570F824F5C273B.idx  frees.c.4DEC0396E86832CD.idx  func.c.6FC7804305B7F1D1.idx  lauxlib.h.182A5244ACB7775C.idx  lib.h.E038F7D7388AE451.idx  lua.c.371264E0033B3317.idx  lua.h.3F58EE37C3A5D9FC.idx  luaconf.h.2E0F9BF19BD23DB9.idx  lualib.h.798CB75E76E10888.idx  macros.c.A1202E06CC394ED0.idx  main.c.A28DB2CE5BC62BEF.idx  pipes.c.2410F303EE4F6871.idx  pointers.c.7FCF210F06358E42.idx  print.c.27306E22C57339D5.idx  print.h.B1F2B666B2725F35.idx  prov.c.BCF9555832C91D95.idx  reverse.c.3E3678CF1E2E46CD.idx  structs.c.E5058896F49FE3B7.idx  testptr.c.97FCF931C9938C82.idx  util.c.9FAD517A93020764.idx  util.h.DC8301BC34F08DB9.idx  vector.c.CDF3B9C6DB8055B9.idx
asm/: accumulator_patching.asm  hello-linux.s  self_mod
exc/: a.out  div0.out  funcs.c  loop.out  sorting.c~  tree.cpp
exc/bgi/: compile.bat
exc/dos/: CMakeLists.txt
exc/kernel/: .modules.order.cmd  linux-hello.ko
exc/linux/kernel/: .Module.symvers.cmd  .linux-hello.ko.cmd  .linux-hello.mod.cmd  .linux-hello.mod.o.cmd  .linux-hello.o.cmd  modules.order
lib/: lib.h
lua/: values-table.lua
src/: advanced.c  allocs.c  c11.c  c99.c  chat.c  est.c  files.c  lua.c  macros.c  main.c  pipes.c  pointers.c  print.c  print.h  prov.c  pthreads.c  serial.c  server.c  util.c  util.h
